# label-studio-dummy-ml-backend

./: .gitignore  README.md  _wsgi.py  main.py  model.py  pyproject.toml  setup.sh
